Version 31

--Added a custom reason-for-shutdown message sent by the server that the client
  displays.

--Added pending shutdown warnings to the ping and self-test protocols.  The
  client displays a dismissable message when it receives a shutdown warning
  from the server.




Version 30  Live Server Fixes

--Added stat tracking max total house value seen in a given day (for computing
  contest exchange rate).

--Added full robbery history on each player's detail page in admin view.

--Fixed so that admin error emails are sent before logging the error in the
  database (for cases where the error was caused by NOT being able to connect
  to the database in the first place).

--Support for monitoring concurrent MySQL connections and contacting admin if a
  threshold is surpassed.

--Made server/client exchange more robust against MySQL connection overflow.
  The server now sleeps for 30 seconds after failing to connect due to too many
  MySQL connections before returning an error to the client, allowing the
  client to gracefully timeout and retry the connection later without choking
  on the error message.  The server has a limit of 100 simultaneous MySQL
  connections, but hitting that limit is no longer fatal to players (they just
  see more client retries until the surge passes).

--Support for changing a user's email in the admin interface.

--Added remote server monitoring.

--Patched various security holes in server PHP code (thanks Chris Cowan).




Version 30  2014-January-17

--Fixed typo in owner died message (thanks Pottage).

--Improved speed of power propagation code by a factor of 6, increasing the
  complexity of house electronics that can be simulated by the server.

--Reduced the maximum electronics step count to 32 (down from 256).  Once the
  step count limit has been reached, the electronics are assumed to be looping
  and are settled down into their lowest-seen states.  An example house that